@@ -96,8 +96,6 @@ public:
     QPixmapCache::Key key;
 };
 
-inline bool qIsDetached(QPixmapCacheEntry &t) { return t.isDetached(); }
-
 QT_END_NAMESPACE
 
 #endif // QPIXMAPCACHE_P_H
